Deprecation: replace new Byte(byte) with Byte.valueOf(byte)